Add test on order workflow (cancel/undocancel, close/reopen)